fix responsive overflow for devices below 950px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,8 +209,6 @@ hr {
     box-sizing: border-box;
     
     overflow: hidden;
-
-    overflow-wrap:inherit;
 }
 
 /* footer */
